--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,31 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+    background-color: rgb(94, 94, 247);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.app-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-section,
+.completed-task-section {
+    width: 45%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.task-container,
+.completed-task-container {
+    background-color: #c3daff;
+    border-radius: 10px;
+    padding: 10px;
 }
 
-.card {
-  padding: 2em;
+.completed-task-item {
+    background-color: #f0f0f0;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.completed-task-item button {
+    margin-left: 10px;
 }
